kubernetes/apps/network/envoy-gateway/riki-boo/envoy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-riki-boo-public
  annotations:
    gatus.home-operations.com/endpoint: |-
      headers:
        Authorization: Basic ${GATUS_TINYAUTH_BASIC_AUTH}
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: public
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "10.10.8.13"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.brauni.dev/route-access: "true"
      tls:
        certificateRefs:
          - kind: Secret
            name: riki-boo-tls
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect-riki-boo
spec:
  parentRefs:
    - name: envoy-riki-boo-public
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
